samples/_failures_safe/1761468127_4ea320_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1cc8ccb1.c: In function ‘main’:
./samples/SAFE/__tmp_1cc8ccb1.c:135:31: error: expected ‘]’ at end of input
  135 |         input_buffer[input_len
      |                               ^
      |                               ]
./samples/SAFE/__tmp_1cc8ccb1.c:135:9: error: expected declaration or statement at end of input
  135 |         input_buffer[input_len
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_1cc8ccb1.c:135:9: error: expected declaration or statement at end of input
